phone app for Napier added

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -19,7 +19,7 @@
 // <!-- Animate CSS -->
 @import "animate.min.scss";
 // <!-- Font-awesome CSS-->
-@import "font-awesome.min.scss";
+//@import "font-awesome.min.scss";
 // // <!-- Owl Caousel CSS -->
 // <link rel="stylesheet" href="vendor/OwlCarousel/owl.carousel.min.css">
 // <link rel="stylesheet" href="vendor/OwlCarousel/owl.theme.default.min.css">
